feat: organize code

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -242,31 +242,31 @@
         </ul>
       </div>
     </div>
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__list-item">
-          <a class="nav__list-link" href="#visiting">Visiting</a>
+    <nav class="header-nav">
+      <ul class="header-nav__list">
+        <li class="header-nav__list-item">
+          <a class="header-nav__list-link" href="#visiting">Visiting</a>
         </li>
-        <li class="nav__list-item">
-          <a class="nav__list-link" href="#explore">Explore</a>
+        <li class="header-nav__list-item">
+          <a class="header-nav__list-link" href="#explore">Explore</a>
         </li>
-        <li class="nav__list-item">
-          <a class="nav__list-link" href="#video">Video</a>
+        <li class="header-nav__list-item">
+          <a class="header-nav__list-link" href="#video">Video</a>
         </li>
-        <li class="nav__list-item">
-          <a class="nav__list-link" href="#gallery">Gallery</a>
+        <li class="header-nav__list-item">
+          <a class="header-nav__list-link" href="#gallery">Gallery</a>
         </li>
-        <li class="nav__list-item">
-          <a class="nav__list-link" href="#tickets">Tickets</a>
+        <li class="header-nav__list-item">
+          <a class="header-nav__list-link" href="#tickets">Tickets</a>
         </li>
-        <li class="nav__list-item">
-          <a class="nav__list-link" href="#contacts">Contacts</a>
+        <li class="header-nav__list-item">
+          <a class="header-nav__list-link" href="#contacts">Contacts</a>
         </li>
       </ul>
-      <div class="item-dropdown">
-        <div class="dropdown-toggler-menu" for="dropdown-toggler">
+      <div class="profile-dropdown">
+        <div class="profile-dropdown__toggler-menu">
           <svg
-            class="user-icon"
+            class="profile-dropdown__user-icon"
             fill="none"
             height="15"
             viewBox="0 0 13 15"
@@ -279,18 +279,18 @@
             />
           </svg>
         </div>
-        <ul class="nav-dropdown">
-          <li class="nav-dropdown__item">
-            <a class="nav-dropdown__link" href="user-page.html">User page</a>
+        <ul class="profile-dropdown__nav">
+          <li class="profile-dropdown__nav-item">
+            <a class="profile-dropdown__nav-link" href="user-page.html">User page</a>
           </li>
-          <li class="nav-dropdown__item">
-            <a class="nav-dropdown__link" href="admin-page.html">Settings</a>
+          <li class="profile-dropdown__nav-item">
+            <a class="profile-dropdown__nav-link" href="admin-page.html">Settings</a>
           </li>
-          <li class="nav-dropdown__item">
-            <a class="nav-dropdown__link" href="login-page.html">Login</a>
+          <li class="profile-dropdown__nav-item">
+            <a class="profile-dropdown__nav-link" href="login-page.html">Login</a>
           </li>
-          <li class="nav-dropdown__item">
-            <a class="nav-dropdown__link" href="register-page.html">Register</a>
+          <li class="profile-dropdown__nav-item">
+            <a class="profile-dropdown__nav-link" href="register-page.html">Register</a>
           </li>
         </ul>
       </div>
