feat: some fixes

--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -112,8 +112,18 @@
                       <td class="profile-ticket-list__table-data">Time</td>
                       <td class="profile-ticket-list__table-data">Amount</td>
                       <td class="profile-ticket-list__table-data">Price(€)</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">
-                        Return ticket
+                      <td class="profile-ticket-list__table-data">Return ticket</td>
+                    </tr>
+                    <tr class="profile-ticket-list__table-row">
+                      <td class="profile-ticket-list__table-data">1</td>
+                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
+                      <td class="profile-ticket-list__table-data">Basic</td>
+                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
+                      <td class="profile-ticket-list__table-data">12:12</td>
+                      <td class="profile-ticket-list__table-data">2</td>
+                      <td class="profile-ticket-list__table-data">40</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
                       </td>
                     </tr>
                     <tr class="profile-ticket-list__table-row">
@@ -124,7 +134,9 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
+                      </td>
                     </tr>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
@@ -134,7 +146,9 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
+                      </td>
                     </tr>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
@@ -144,7 +158,9 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
+                      </td>
                     </tr>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
@@ -154,7 +170,9 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
+                      </td>
                     </tr>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
@@ -164,7 +182,9 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
+                      </td>
                     </tr>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
@@ -174,7 +194,9 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
+                      </td>
                     </tr>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
@@ -184,7 +206,9 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
+                      </td>
                     </tr>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
@@ -194,7 +218,9 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
+                      </td>
                     </tr>
                     <tr class="profile-ticket-list__table-row">
                       <td class="profile-ticket-list__table-data">1</td>
@@ -204,17 +230,9 @@
                       <td class="profile-ticket-list__table-data">12:12</td>
                       <td class="profile-ticket-list__table-data">2</td>
                       <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
-                    </tr>
-                    <tr class="profile-ticket-list__table-row">
-                      <td class="profile-ticket-list__table-data">1</td>
-                      <td class="profile-ticket-list__table-data">Temporary exhibition</td>
-                      <td class="profile-ticket-list__table-data">Basic</td>
-                      <td class="profile-ticket-list__table-data">Friday, August 19</td>
-                      <td class="profile-ticket-list__table-data">12:12</td>
-                      <td class="profile-ticket-list__table-data">2</td>
-                      <td class="profile-ticket-list__table-data">40</td>
-                      <td class="profile-ticket-list__table-data btn-return-ticket">Return</td>
+                      <td class="profile-ticket-list__table-data profile-ticket-list__btn-return">
+                        Return
+                      </td>
                     </tr>
                   </tbody>
                 </table>
