--- a/src/scss/sections/header/_header.scss
+++ b/src/scss/sections/header/_header.scss
@@ -96,6 +96,9 @@
         color: var(--palette-tertiary-text);
         box-shadow: var(--shadows-3);
       }
+      &:active {
+        color: var(--palette-tertiary-main);
+      }
     }
   }
 }
