--- a/src/scss/sections/main/tickets/_tickets.scss
+++ b/src/scss/sections/main/tickets/_tickets.scss
@@ -72,6 +72,7 @@
 }
 
 .tickets-type {
+  align-items: flex-start;
   flex: 1 0 auto;
   flex-direction: column;
   @include media-breakpoint-up(xxl) {
@@ -95,10 +96,47 @@
     margin-bottom: 25px;
   }
   &__bar {
-    width: 17px;
-    height: 17px;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 15px;
+
+    &::before {
+      content: "";
+      display: flex;
+      width: 100%;
+      height: 100%;
+      border: 2px solid var(--palette-primary-main);
+      border-radius: 50%;
+    }
+    &:hover::before {
+      border-color: var(--palette-tertiary-light);
+    }
+    &::after {
+      width: 100%;
+      height: 100%;
+      transition-duration: 0.3s;
+      background-color: var(--palette-primary-main);
+      border-radius: 50%;
+      content: "";
+      display: flex;
+      left: 0px;
+      position: absolute;
+      top: 0px;
+      transform: scale(0);
+    }
+    &:checked::after {
+      transform: scale(1);
+    }
   }
   &__bar-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: var(--typography-fontWeightLight);
     font-size: 22px;
     white-space: nowrap;
