--- a/src/scss/sections/main/tickets/_form.scss
+++ b/src/scss/sections/main/tickets/_form.scss
@@ -489,18 +489,19 @@
     gap: 15px;
   }
   &__text-field {
-    display: flex;
     flex-direction: column;
     font-weight: var(--typography-fontWeightLight);
     font-size: 12px;
     color: var(--palette-primary-main);
   }
   &__inner-field {
+    max-width: 320px;
     width: 100%;
     height: 35px;
     margin-top: 5px;
-    border: none;
+    background-color: var(--palette-primary-light);
     padding: 10px;
+    box-sizing: border-box;
   }
   &__back-container {
     max-width: 75px;
